--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LightOSM"
 uuid = "d1922b25-af4e-4ba3-84af-fe9bea896051"
 authors = ["Jack Chan <jchan2@deloitte.com.au>"]
-version = "0.1.6"
+version = "0.1.7"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -18,14 +18,14 @@ StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "1"
-LightGraphs = "1.3.3"
-DataStructures = "0.17.20"
-HTTP = "0.9.1"
+DataStructures = "0.17.20, 0.18"
+HTTP = "0.8.17, 0.9"
 JSON = "0.21.0"
+LightGraphs = "1.3.3"
 LightXML = "0.9.0"
 MetaGraphs = "0.6.5"
 NearestNeighbors = "0.4.6"
 Parameters = "0.12.1"
 SimpleWeightedGraphs = "1.1.1"
 StaticGraphs = "0.2.0"
+julia = "1"
