--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,2 +1,4 @@
 [deps]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
