--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
 name = "LightOSM"
 uuid = "d1922b25-af4e-4ba3-84af-fe9bea896051"
 authors = ["Jack Chan <jchan2@deloitte.com.au>"]
-version = "0.1.18"
+version = "0.1.19"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
@@ -19,13 +19,13 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 DataStructures = "0.17.20, 0.18"
+Graphs = "1.4.0"
 HTTP = "0.8.17, 0.9"
 JSON = "0.21.0"
-LightGraphs = "1.3.3"
 LightXML = "0.9.0"
-MetaGraphs = "0.6.5"
+MetaGraphs = "0.7.0"
 NearestNeighbors = "0.4.6"
 Parameters = "0.12.1"
-SimpleWeightedGraphs = "1.1.1"
-StaticGraphs = "0.2.0"
+SimpleWeightedGraphs = "1.2.0"
+StaticGraphs = "0.3.0"
 julia = "1"
