simplify_graph() - remove interstitial nodes from graph

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["Jack Chan <jchan2@deloitte.com.au>"]
 version = "0.3.1"
 
 [deps]
+ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
