--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 QuickHeaps = "30b38841-0f52-47f8-a5f8-18d5d4064379"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
