--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LightOSM"
 uuid = "d1922b25-af4e-4ba3-84af-fe9bea896051"
 authors = ["Jack Chan <jchan2@deloitte.com.au>"]
-version = "0.1.20"
+version = "0.2.0"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -12,6 +12,7 @@ LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+QuickHeaps = "30b38841-0f52-47f8-a5f8-18d5d4064379"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
@@ -26,6 +27,7 @@ LightXML = "0.9.0"
 MetaGraphs = "0.7.0"
 NearestNeighbors = "0.4.6"
 Parameters = "0.12.1"
+QuickHeaps = "0.1.1"
 SimpleWeightedGraphs = "1.2.0"
 StaticGraphs = "0.3.0"
 julia = "1"
