--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 DataStructures = "0.17.20, 0.18"
 Graphs = "1.4.0"
-HTTP = "0.8.17, 0.9"
+HTTP = "0.8.17, 0.9, 1"
 JSON = "0.21.0"
 LightXML = "0.9.0"
 MetaGraphs = "0.7.0"
