--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ LightXML = "0.9.0"
 MetaGraphs = "0.7.0"
 NearestNeighbors = "0.4.6"
 Parameters = "0.12.1"
-QuickHeaps = "0.1.1"
+QuickHeaps = "0.1.1, 0.2"
 SimpleWeightedGraphs = "1.2.0"
 SpatialIndexing = "0.1.3"
 StaticArrays = "1.4.6"
